--- a/请求.md
+++ b/请求.md
@@ -1,86 +1,178 @@
-## 1. 登录流程分析
+- ## 一、登录认证流程分析
 
-### 关键API端点：
+  ### 1. 登录步骤
 
-- __登录邮箱提交__：`https://accountverification.business.gemini.google/v1/verify-oob-code`
-- __验证码验证__：`https://accountverification.business.gemini.google/_/IdentityPlatformFrontendUI/data/batchexecute`
-- __OAuth授权__：`https://accountverification.business.gemini.google/oauth2/authorize`
+  1. __访问登录页面__: `https://business.gemini.google/` → 重定向到 `https://auth.business.gemini.google/login`
 
-### 认证机制：
+  2. __输入邮箱__: 发送POST请求到验证码服务
 
-- 使用OAuth 2.0流程，包含`client_id`、`redirect_uri`、`state`、`scope`、`nonce`等标准参数
-- 验证码通过邮箱发送，通过单独的验证码验证接口验证
-- 最终通过重定向和cookie设置完成登录
+  3. __验证码验证__:
 
-## 2. 聊天API调用分析
+     - 向邮箱发送6位验证码（示例：KRTZNL）
+     - POST请求：`https://accountverification.business.gemini.google/v1/verify-oob-code`
+     - 包含OAuth2授权参数和加密的用户标识
 
-### 核心API端点：
+  ### 2. 关键认证请求
 
-- __会话创建__：`POST https://biz-discoveryengine.googleapis.com/v1alpha/locations/global/widgetCreateSession`
-- __流式聊天__：`POST https://biz-discoveryengine.googleapis.com/v1alpha/locations/global/widgetStreamAssist`
-- __查询补全__：`POST https://biz-discoveryengine.googleapis.com/v1alpha/locations/global/widgetAdvancedCompleteQuery`
+  - __OAuth2授权__: `GET https://accountverification.business.gemini.google/oauth2/authorize`
+  - __验证码验证__: `POST https://accountverification.business.gemini.google/v1/verify-oob-code`
+  - __会话建立__: 成功后重定向到主页面并设置cookie
 
-### 请求头详细信息：
+  ## 二、API请求流程分析
 
-```javascript
-Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVC...
-Content-Type: application/json
-sec-ch-ua: "Not/A)Brand";v="8", "Chromium";v="126", "Google Chrome";v="126"
-sec-ch-ua-arch: "x86"
-sec-ch-ua-platform: "Windows"
-User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36...
-Referer: https://business.gemini.google/
-Origin: https://business.gemini.google
-```
+  ### 核心API端点
 
-### 流式聊天请求体格式：
+  1. __会话创建__：
 
-```json
-{
-  "configId": "d06739ca-6683-46db-bb51-07395a392439",
-  "additionalParams": {"token": "-"},
-  "streamAssistRequest": {
-    "session": "collections/default_collection/engines/agentspace-engine/sessions/12819925172900804070",
-    "query": {"parts": [{"text": "你好，请介绍一下Gemini Business的API调用流程"}]},
-    "filter": "",
-    "fileIds": [],
-    "answerGenerationMode": "NORMAL",
-    "toolsSpec": {
-      "webGroundingSpec": {},
-      "toolRegistry": "default_tool_registry",
-      "imageGenerationSpec": {},
-      "videoGenerationSpec": {}
-    },
-    "languageCode": "zh",
-    "userMetadata": {"timeZone": "Asia/Shanghai"},
-    "assistSkippingMode": "REQUEST_ASSIST"
+     ```javascript
+     POST https://biz-discoveryengine.googleapis.com/v1alpha/locations/global/widgetCreateSession
+     ```
+
+  2. __流式助手请求__（主要API）：
+
+     ```javascript
+     POST https://biz-discoveryengine.googleapis.com/v1alpha/locations/global/widgetStreamAssist
+     ```
+
+  ### 关键请求头
+
+  ```http
+  Authorization: Bearer {长JWT令牌}
+  Content-Type: application/json
+  x-server-timeout: 1800
+  Origin: https://business.gemini.google
+  Referer: https://business.gemini.google/
+  User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36...
+  ```
+
+  ### 请求体结构
+
+  ```json
+  {
+    "configId": "d06739ca-6683-46db-bb51-07395a392439",
+    "additionalParams": {"token": "-"},
+    "streamAssistRequest": {
+      "session": "collections/default_collection/engines/agentspace-engine/sessions/10623580602901355290",
+      "query": {"parts": [{"text": "用户消息"}]},
+      "filter": "",
+      "fileIds": [],
+      "answerGenerationMode": "NORMAL",
+      "toolsSpec": {
+        "webGroundingSpec": {},
+        "toolRegistry": "default_tool_registry",
+        "imageGenerationSpec": {},
+        "videoGenerationSpec": {}
+      },
+      "languageCode": "zh",
+      "userMetadata": {"timeZone": "Asia/Shanghai"},
+      "assistSkippingMode": "REQUEST_ASSIST"
+    }
   }
-}
-```
+  ```
 
-### 流式响应格式：
+  ## 三、Docker部署配置建议
 
-- 使用SSE（Server-Sent Events）流式响应
-- 每个响应块包含`uToken`和`streamAssistResponse`
-- 响应结构包含`answer`对象，其中有`state`、`replies`数组和`adkAuthor`
-- 每条回复包含`groundedContent`，其中有`role`和`text`
+  ### 1. 环境变量配置（使用-e参数，不存文件）
 
-## 3. 关键发现总结
+  ```bash
+  docker run -d \
+    -e GEMINI_BUSINESS_URL="https://business.gemini.google" \
+    -e API_BASE_URL="https://biz-discoveryengine.googleapis.com/v1alpha" \
+    -e AUTH_URL="https://auth.business.gemini.google" \
+    -e ACCOUNT_EMAIL="2123146130@qq.com" \
+    -e SESSION_TIMEOUT="1800" \
+    -e LOG_LEVEL="info" \
+    -e STDOUT_LOGGING="true" \
+    -p 8080:8080 \
+    bailangvvking/gemini-business-proxy
+  ```
 
-### 认证令牌：
+  ### 2. Go程序Dockerfile示例
 
-- 使用JWT格式的Bearer Token，包含用户信息和过期时间
-- Token通过登录流程获得，有效期为5分钟
+  ```dockerfile
+  FROM golang:1.21-alpine AS builder
+  WORKDIR /app
+  COPY go.mod go.sum ./
+  RUN go mod download
+  COPY . .
+  RUN CGO_ENABLED=0 GOOS=linux go build -o gemini-proxy ./cmd/server
+  
+  FROM alpine:latest
+  RUN apk --no-cache add ca-certificates
+  WORKDIR /root/
+  COPY --from=builder /app/gemini-proxy .
+  EXPOSE 8080
+  CMD ["./gemini-proxy"]
+  ```
 
-### 会话管理：
+  ### 3. 代理器配置（OpenAI格式兼容）
 
-- 每个聊天会话有唯一的session ID
-- 会话格式：`collections/default_collection/engines/agentspace-engine/sessions/{session_id}`
+  ```yaml
+  # config.yaml
+  server:
+    port: 8080
+    host: "0.0.0.0"
+  
+  gemini:
+    business_url: "${GEMINI_BUSINESS_URL}"
+    api_base_url: "${API_BASE_URL}"
+    auth_url: "${AUTH_URL}"
+  
+  openai_compatible:
+    enabled: true
+    api_key_header: "Authorization"
+    model_mapping:
+      "gpt-3.5-turbo": "gemini-business"
+      "gpt-4": "gemini-business-pro"
+  
+  logging:
+    level: "${LOG_LEVEL}"
+    stdout: "${STDOUT_LOGGING}"
+    format: "json"
+  ```
 
-### 请求参数：
+  ### 4. 日志标准输出到Docker
 
-- `configId`：企业配置ID（如d06739ca-6683-46db-bb51-07395a392439）
-- `languageCode`：语言代码（如zh）
-- `answerGenerationMode`：回答生成模式（NORMAL）
-- `toolsSpec`：工具规范配置
-- `userMetadata`：用户元数据，包含时区等信息
+  ```go
+  // 在Go程序中使用标准输出
+  log.SetOutput(os.Stdout)
+  log.SetFormatter(&log.JSONFormatter{})
+  log.WithFields(log.Fields{
+    "service": "gemini-proxy",
+    "request_id": requestID,
+  }).Info("API Request processed")
+  ```
+
+  ## 四、实现要点
+
+  1. __认证流程自动化__: 需要处理OAuth2授权、验证码验证和会话管理
+  2. __API请求封装__: 将Gemini Business API封装成OpenAI兼容格式
+  3. __流式响应支持__: 支持Server-Sent Events (SSE) 用于流式响应
+  4. __错误处理__: 完善的错误处理和重试机制
+  5. __配置管理__: 通过环境变量注入所有配置，无需配置文件
+
+  ## 五、使用示例
+
+  ```bash
+  # 启动代理服务
+  docker run -d \
+    -e GEMINI_BUSINESS_URL="https://business.gemini.google" \
+    -e API_BASE_URL="https://biz-discoveryengine.googleapis.com/v1alpha" \
+    -e ACCOUNT_EMAIL="your-email@example.com" \
+    -p 8080:8080 \
+    gemini-business-proxy
+  
+  # 使用OpenAI格式调用
+  curl -X POST http://localhost:8080/v1/chat/completions \
+    -H "Content-Type: application/json" \
+    -H "Authorization: Bearer your-api-key" \
+    -d '{
+      "model": "gpt-3.5-turbo",
+      "messages": [
+        {"role": "user", "content": "Hello, test API request"}
+      ],
+      "stream": true
+    }'
+  ```
+
+  整个流程分析已完成，包括完整的登录认证、API请求结构和Docker部署配置建议。
